# rules_buf

./: .gitignore  BUILD  BUILD.bazel  DESIGN.md  MODULE.bazel  Makefile  README.md  WORKSPACE  break.bzl  deps.bzl  go.mod  go.sum  go_deps.bzl  image.bzl  lint.bzl  repo.bzl  repositories.bzl  utils.bzl
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/: dependabot.yml
.github/workflows/: ci.yaml  publish-to-bcr.yaml  release.yaml  tests.yaml
buf/: BUILD  BUILD.bazel  README.md  defs.bzl  extensions.bzl  repositories.bzl
buf/internal/: BUILD  BUILD.bazel  BUILD.dist.bazel  BUILD.toolchains.bazel  break.bzl  breaking.bzl  build.bzl  common.bzl  config.bzl  dep.bzl  dependencies.bzl  format.bzl  image.bzl  lint.bzl  module.bzl  plugin.bzl  protoc.bzl  push.bzl  repo.bzl  toolchain.bzl
buf/internal/cmd/generate_deps/: BUILD.bazel
buf/internal/generate_deps/: BUILD  main.go
docs/: buf-rules.md
example/: BUILD  README.md  WORKSPACE  buf.yaml  example.proto
example/google/type/: BUILD
example/pet/v1/: BUILD  pet.proto
examples/: README.md
examples/bzlmod/: BUILD.bazel  MODULE.bazel  buf.yaml  file.proto  unused.proto
examples/echo/: MODULE.bazel  go.mod  go.sum
examples/echo/cmd/echo/: BUILD.bazel  main.go
examples/echo/proto/echo/v1/: BUILD.bazel  echo.proto
examples/gazelle/: BUILD.bazel  README.md  WORKSPACE  buf.work.yaml  buf_deps.bzl
examples/gazelle/barapis/: BUILD.bazel
examples/gazelle/barapis/bar/v1/: BUILD.bazel  bar.proto
examples/gazelle/fooapis/: BUILD.bazel
examples/gazelle/fooapis/foo/v1/: BUILD.bazel  foo.proto
examples/gazelle_multi/: BUILD  WORKSPACE  buf.work.yaml
examples/gazelle_multi/paymentapis/: BUILD
examples/gazelle_multi/paymentapis/acme/payment/v2/: BUILD  payment.proto
examples/gazelle_multi/petapis/: BUILD
examples/gazelle_multi/petapis/acme/pet/v1/: BUILD  pet.proto
examples/gazelle_single/: BUILD  WORKSPACE  buf.yaml  buf_deps.bzl
examples/gazelle_single/pets/v1/: BUILD  BUILD.bazel  pets.proto
examples/generate/: BUILD.bazel  README.md  buf.gen.yaml  buf_deps.bzl  generate.bzl
examples/generate/proto/: BUILD.bazel
examples/generate/proto/foo/v1/: BUILD.bazel  foo.proto
examples/repo/: README.md  WORKSPACE  buf.yaml
examples/repo/pet/v1/: BUILD.bazel
examples/single_module/: BUILD.bazel  README.md  WORKSPACE
examples/single_module/bar/v1/: BUILD.bazel  bar.proto
examples/single_module/foo/v1/: BUILD.bazel  foo.proto
examples/toolchain/: BUILD.bazel  MODULE.bazel
examples/v2/: MODULE.bazel  README.md
examples/v2/barapis/: BUILD.bazel
examples/v2/barapis/bar/v1/: BUILD.bazel  bar.proto
examples/v2/fooapis/: BUILD.bazel
examples/v2/fooapis/foo/v1/: BUILD.bazel
examples/version/: BUILD.bazel  README.md  WORKSPACE  version.bzl
examples/version/foo/v1/: BUILD.bazel  foo.proto
examples/workspace/: WORKSPACE
examples/workspace/barapis/: BUILD.bazel
examples/workspace/barapis/bar/v1/: BUILD.bazel  bar.proto
examples/workspace/fooapis/: BUILD.bazel
examples/workspace/fooapis/foo/v1/: BUILD.bazel  foo.proto
gazelle/buf/: BUILD  README.md  break.go  breaking_rule.go  buf.go  buf_lang.go  buf_lock.go  buf_test.go  buf_work.go  config.go  cross_resolve.go  defs.bzl  gazelle.go  gazelle_test.go  generate.go  kinds.go  lint.go  lint_rule.go  repositories.bzl  resolve.go  update.go  update_repos.go
gazelle/buf/testdata/breaking_bazel/: BUILD.out
gazelle/buf/testdata/breaking_module/: BUILD.out
gazelle/buf/testdata/breaking_package/foo/v1/: BUILD.out
gazelle/buf/testdata/cross_resolve/fooapis/foo/v1/: BUILD.out
gazelle/buf/testdata/cross_resolve/petapis/pets/v1/: BUILD.out
gazelle/buf/testdata/cross_resolve_override/: buf.work.yaml
gazelle/buf/testdata/cross_resolve_override/petapis/: BUILD.in  BUILD.out
gazelle/buf/testdata/cross_resolve_override/petapis/pets/v1/: BUILD.out
gazelle/buf/testdata/imports/: buf_deps.bzl.out
gazelle/buf/testdata/imports/fooapis/foo/v1/: foo.proto
gazelle/buf/testdata/imports/petapis/pets/v1/: pets.proto
gazelle/buf/testdata/imports_toolchain_name/: WORKSPACE.in  buf_deps.bzl.out
gazelle/buf/testdata/mix/petapis/pets/v1/: BUILD.out
gazelle/buf/testdata/mix/v1/zap/v1/: BUILD.out
gazelle/buf/testdata/mix/v2/tap/v1/: BUILD.out
gazelle/buf/testdata/push/: BUILD.out  buf.yaml
gazelle/buf/testdata/v2/breaking_module/bar/v1/: BUILD.out
gazelle/buf/testdata/v2/cross_resolve/petapis/pets/v1/: BUILD.out
gazelle/buf/testdata/v2/merge/foo/v1/: BUILD.out
gazelle/buf/testdata/v2/workspace/fooapis/foo/v1/: BUILD.out
gazelle/buf/testdata/workspace/: buf.work.yaml
gazelle/buf/testdata/workspace/barapis/: BUILD.out
gazelle/buf/testdata/workspace/barapis/bar/v1/: BUILD.out
gazelle/buf/testdata/workspace/fooapis/: BUILD.in  BUILD.out
gazelle/buf/testdata/workspace/fooapis/foo/v1/: BUILD.in  BUILD.out
gazelle/buf/testdata/workspace/petapis/: BUILD.out
gazelle/buf/testdata/workspace/petapis/pets/v1/: BUILD.out  pets.proto
tests/v1/: BUILD.bazel  test.proto
tools/: BUILD  README.md  platforms.bzl  toolchain.bzl
tools/buf/: BUILD  BUILD.bazel  toolchain.bzl
tools/protoc-gen-buf-breaking/: BUILD  BUILD.bazel  toolchain.bzl
tools/protoc-gen-buf-lint/: BUILD  BUILD.bazel  toolchain.bzl
