load("@rules_buf//buf:defs.bzl", "buf_breaking_test")

# Export the buf.yaml to make it available to rules in other packages.
exports_files(["buf.yaml"])

# The next line is gazelle directive that sets the image file to use for breaking change detection.
# gazelle:buf_breaking_against testdata/image.bin

buf_breaking_test(
    name = "buf_breaking",
    against = "testdata/image.bin",
    config = "//barapis:buf.yaml",
    targets = ["//barapis/bar/v1:bar_v1_proto"],
)
