load("@rules_buf//buf:defs.bzl", "buf_breaking_test")

# Export the buf.yaml to make it available to rules in other packages.
exports_files(["buf.yaml"])

# The next line is gazelle directive that sets the image file to use breaking change detection.
# gazelle:buf_breaking_against testdata/image.bin

buf_breaking_test(
    name = "buf_breaking",
    against = "testdata/image.bin",
    config = "//fooapis:buf.yaml",
    targets = ["//fooapis/foo/v1:foo_v1_proto"],
)
