load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_buf//buf:defs.bzl", "buf_lint_test")

proto_library(
    name = "pets_v1_proto",
    srcs = ["pets.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@build_buf_bazel-examples_gazelle-single//validate:validate_proto",
        "@com_google_protobuf//:duration_proto",
    ],
)

go_proto_library(
    name = "pets_v1_go_proto",
    importpath = "github.com/bufbuild/rules_buf/examples/gazelle_single/pets/v1",
    proto = ":pets_v1_proto",
    visibility = ["//visibility:public"],
    deps = ["//validate:validate_proto"],
)

go_library(
    name = "pets",
    embed = [":pets_v1_go_proto"],
    importpath = "github.com/bufbuild/rules_buf/examples/gazelle_single/pets/v1",
    visibility = ["//visibility:public"],
)

buf_lint_test(
    name = "pets_v1_proto_lint",
    targets = [":pets_v1_proto"],
    use_rules = ["DEFAULT"],
)
