load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "foo_proto",
    srcs = ["foo.proto"],
    visibility = ["//visibility:public"],
)

buf_lint_test(
    name = "foo_proto_lint",
    config = "//:buf.yaml",
    targets = [":foo_proto"],
)
