load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "bar_proto",
    srcs = ["bar.proto"],
    strip_import_prefix = "/barapis",
    visibility = ["//visibility:public"],
)

buf_lint_test(
    name = "bar_proto_lint",
    config = "//:buf.yaml",
    targets = [":bar_proto"],
)
